# GlassWall

./: .gitignore  CMakeLists.txt  README.md
GlassWall/: CMakeLists.txt
GlassWall/examples/: CMakeLists.txt
GlassWall/examples/src/: main.cpp
GlassWall/include/: shaderprogram.h  world.h
GlassWall/src/: entity.cpp  renderengine.cpp  renderengine.h  shaderprogram.cpp  window.cpp  window.h  world.cpp
cmake/: GlassWallConfig.cmake.in
examples/: CMakeLists.txt
examples/glsl/: debug.frag  debug.vert
examples/resources/: config.json  level.json  test.dae
examples/src/: main.cpp
include/: camera.h  component.h  entity.h  fpscounter.h  inputmanager.h  lighting.h  model.h  settings.h  shaderprogram.h  textures.h  util.h  vertex.h  world.h
include/entities/: staticblock.h
src/: camera.cpp  colladaloader.cpp  colladaloader.h  component.cpp  entity.cpp  fpscounter.cpp  inputmanager.cpp  lighting.cpp  model.cpp  renderengine.cpp  shaderprogram.cpp  textures.cpp  util.cpp  window.cpp  window.h  world.cpp
src/entities/: staticblock.cpp
